--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.633.0",
+    "@aws-sdk/client-s3": "^3.637.0",
     "@aws-sdk/s3-request-presigner": "^3.633.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.0.2",
     "jquery": "^1.12.4",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
