--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.30",
