--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.637.0",
-    "@aws-sdk/s3-request-presigner": "^3.633.0",
+    "@aws-sdk/middleware-sdk-s3": "^3.635.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
     "@popperjs/core": "^2.11.8",
+    "@smithy/util-retry": "^3.0.3",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.0.2",
-    "jquery": "^1.12.4",
+    "jquery": "^3.7.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "next-auth": "^4.24.7",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "swr": "^2.2.5",
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.30",
