--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@aws-sdk/middleware-sdk-s3": "^3.635.0",
     "@aws-sdk/s3-request-presigner": "^3.637.0",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^1.9.2",
     "@smithy/util-retry": "^3.0.3",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.0.2",
@@ -24,6 +27,9 @@
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "stripe": "^16.2.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
@@ -31,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux": "^3.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
